--- a/D080C882A.opf/index.yml
+++ b/D080C882A.opf/index.yml
@@ -4,8 +4,8 @@ revision: '00001'
 annotations:
   896f83c6e50745f8ac9b24b0f2811c3a:
     parts: {}
+    work_id: D3986
     span:
-    - vol: 65
+    - base: 43bb
       start: 0
       end: 135178
-    work_id: D3986
